@@ -11,6 +11,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>17</java.version>  <!-- Usa JDK 17 -->
+        <!--  <javafx.version>17</javafx.version> Forzar JavaFX 17 -->
+
 
     </properties>
     <repositories>
@@ -60,31 +62,31 @@
         </dependency>
 
         <!-- JavaFX -->
-        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
+        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>17.0.2</version>
-        </dependency>
+            <version>${javafx.version}</version>
+        </dependency> -->
 
-        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-fxml -->
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-fxml</artifactId>
-            <version>17.0.2</version>
-        </dependency>
-
+        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-fxml 
+                <dependency>
+                    <groupId>org.openjfx</groupId>
+                    <artifactId>javafx-fxml</artifactId>
+                    <version>${javafx.version}</version>
+                </dependency>
+        -->
         <dependency>
             <groupId>org.kordamp.ikonli</groupId>
             <artifactId>ikonli-javafx</artifactId>
             <version>12.3.1</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-base -->
+        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-base 
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-base</artifactId>
-            <version>17.0.2</version>
-        </dependency>
+            <version>${javafx.version}</version>
+        </dependency> -->
         
         <!-- JasperReports -->
         <!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->
@@ -94,21 +96,24 @@
             <version>7.0.1</version>
         </dependency>
 
+        <!--
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-web</artifactId>
-            <version>17.0.2</version>
+            <version>${javafx.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-swing</artifactId>
-            <version>17.0.2</version>
+            <version>${javafx.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-media</artifactId>
-            <version>17.0.2</version>
+            <version>${javafx.version}</version>
         </dependency>
+        
+        -->
         <dependency>
             <groupId>org.kordamp.bootstrapfx</groupId>
             <artifactId>bootstrapfx-core</artifactId>
@@ -139,8 +144,21 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <release>${java.version}</release>
+                    <source>17</source>
+                    <target>17</target>
+                    <release>17</release>
+                    <compilerArgs>
+                        <arg>--module-path</arg>
+                        <arg>${java.home}/jmods</arg>
+                        <arg>--add-modules</arg>
+                        <arg>javafx.controls,javafx.fxml</arg>
+                    </compilerArgs>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>3.8.1</version> <!-- O la más reciente -->
             </plugin>
 
             <!-- Plugin para ejecutar JavaFX -->
@@ -150,6 +168,7 @@
                 <version>0.0.8</version>
                 <executions>
                     <execution>
+                        <id>default-cli</id>
                         <goals>
                             <goal>run</goal>
                         </goals>
@@ -157,22 +176,51 @@
                 </executions>
                 <configuration>
                     <mainClass>com.cd.incidenciasappfx.App</mainClass>
+                    <modulePath>${java.home}/jmods</modulePath>
+                    <addModules>javafx.controls,javafx.fxml</addModules>
                 </configuration>
             </plugin>
-            <!-- Plugin para empaquetar el JAR ejecutable -->
+
+            <!-- Plugin para empaquetar el código fuente -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.2.2</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>com.cd.incidenciasappfx.App</mainClass> 
-                        </manifest>
-                    </archive>
-                </configuration>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.3.0</version>
             </plugin>
+
+            <!-- Plugin para generar documentación Javadoc -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.4.1</version>
+            </plugin>
+
+            <!-- 
+<plugin>
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-shade-plugin</artifactId>
+<version>3.4.1</version>
+<executions>
+<execution>
+<phase>package</phase>
+<goals>
+    <goal>shade</goal>
+</goals>
+<configuration>
+    <transformers>
+        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+            <mainClass>com.cd.incidenciasappfx.App</mainClass>
+        </transformer>
+    </transformers>
+</configuration>
+</execution>
+</executions>
+</plugin>
+
+            Plugin para empaquetar el JAR ejecutable -->
         </plugins>
     </build>
+
+
 
 </project>
